<resources>
    <string name="app_name">wrkify</string>
    <string name="title_activity_main">wrkify</string>
    <string name="title_myposts">My Posts</string>
    <string name="title_mytasks">My Tasks</string>
    <string name="title_search">Search</string>
    <string name="bottom_sheet_toggle_description">Show/hide controls</string>
    <string name="view_task_mark_done">Mark task as done</string>
    <string name="view_task_deassign">Deassign task</string>
    <string name="view_task_enter_bid_label">Your bid</string>
    <string name="view_task_place_bid">Place bid</string>
    <string name="bidListItem_taskCompleter">Task Completer</string>
    <string name="bidListItem_bidAmount">$23</string>
    <string name="bidListItem_viewProfile">View Profile</string>
    <string name="bidListItem_reject">Reject</string>
    <string name="bidListItem_accept">Accept</string>
    <string name="bidListActivity_taskTitle">Task Name Goes Here</string>
    <string name="bidListActivity_bidCount">555 bids so far</string>
    <string name="login_username_label">Username</string>
    <string name="login_login">Login</string>
    <string name="login_register_caption">Don\'t have an account?</string>
    <string name="login_register">Sign up</string>
    <string name="register_caption">Create a new account</string>
    <string name="register_register">Register</string>
    <string name="edit_profile_email_label">Email address</string>
    <string name="edit_profile_phone_label">Phone number</string>
    <string name="edit_profile_contact_header">Contact information</string>
    <string name="edit_task_title_label">Task title</string>
    <string name="edit_task_description_label">Description</string>
    <string name="overview_view_profile">View profile</string>
    <string name="overview_logout">Logout</string>
    <string name="task_list_empty">Nothing here</string>
    <string name="edit_task_checklist_label">Checklist</string>
    <string name="checklist_editor_item_label">Item</string>
    <string name="checklist_editor_delete_description">Delete item</string>
    <string name="login_fail">Account not found.</string>
    <string name="no_internet">Cannot connect to server.</string>
    <string name="bad_user_info">Invalid name, email, or phone number</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_set_task_location">SetTaskLocationActivity</string>
    <string name="title_activity_test_maps">testMap</string>
    <string name="register_failed">Registration failed</string>
</resources>
