<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 CMPUT301W18T18
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/overviewAppBar"
        app:layout_insetEdge="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        style="@style/AppTheme">

        <Toolbar
            android:id="@+id/overviewToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:title="Title"
            android:titleTextAppearance="@android:style/TextAppearance.Material.Widget.ActionBar.Title.Inverse">

            <view class="ca.ualberta.cs.wrkify.UserView"
                android:id="@+id/overviewSelfView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:layout_marginEnd="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

        </Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/overviewTabBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="16dp"
            app:tabTextColor="@android:color/primary_text_dark"
            app:tabSelectedTextColor="@color/colorAccent">
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/overviewOfflineIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="1dp"
        android:background="@color/colorOfflineHighlight"
        app:layout_constraintTop_toBottomOf="@id/overviewNotificationContainer">

        <ImageView
            android:id="@+id/overviewOfflineIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cloud_off_black_24dp"
            android:tint="@android:color/white"
            tools:ignore="ContentDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You have unsynced changes"
            app:layout_constraintStart_toEndOf="@id/overviewOfflineIcon"
            app:layout_constraintBottom_toBottomOf="@id/overviewOfflineIcon"
            app:layout_constraintTop_toTopOf="@id/overviewOfflineIcon"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/primary_text_dark"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/overviewNotificationContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/overviewAppBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/overviewNotificationTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/overviewNotificationOverflowIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1E000000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/overviewNotificationOverflowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3 more notifications"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        app:layout_constraintTop_toBottomOf="@+id/overviewOfflineIndicator"
        android:id="@+id/overviewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_dodgeInsetEdges="all"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/overviewAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:layout_dodgeInsetEdges="bottom"
        app:fabSize="normal"
        android:src="@drawable/ic_create_white_24dp" />

</android.support.constraint.ConstraintLayout>