...
        android:id="@+id/searchLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:background="#F0F0F0"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:drawablePadding="4dp"
...
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/taskSearchRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
